--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->2
     <meta charset="utf-8" />1
-    <meta
+    <meta3
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
