--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->2
     <meta charset="utf-8" />1
     <meta3
-      name="viewport"
+      name="viewport"5
       content="width=device-width, initial-scale=1, shrink-to-fit=no"4
     />
 
