--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"4
     />
 6
-    <!-- Google Font -->
+    <!-- Google Font -->7
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
       rel="stylesheet"
