--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->2
-    <meta charset="utf-8" />1
-    <meta3
-      name="viewport"5
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"4
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-6
-    <!-- Google Font -->7
+
+    <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
       rel="stylesheet"
