--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">123456
+<html lang="en">1234567
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
