--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta4
-      name="viewport"
+      name="viewport"6
       content="width=device-width, initial-scale=1, shrink-to-fit=no"5
     />
 
