--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>1234567
+  <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
